# tmp-rescale-mini-project

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
backend/config/: api.py  asgi.py  logging.py  settings.py  urls.py
backend/jobs/: api.py  apps.py  bench.py  models.py  pagination.py  schemas.py  services.py
backend/jobs/migrations/: 0001_initial.py  0002_sort_indexes.py
backend/jobs/tests/: conftest.py  factories.py  test_api.py  test_health.py  test_logging.py  test_models.py  test_pagination_spike.py  test_services.py
docs/: ADR.md  future-improvements.md  perf.md
docs/design/: preview.html  tokens.md
docs/prompts/: prompt.md
docs/sessions/: 2026-04-25-114347-initial-session-backend.txt  2026-04-25-130012-follow-up-session-frontend.txt  2026-04-26-154134-final-touch.txt
docs/specs/: STATE.md
docs/specs/backend/: design.md  implementation-log.md  requirements.md  tasks.md
docs/specs/frontend/: design.md  implementation-log.md  requirements.md  (+1 more)
frontend/: .dockerignore  Dockerfile  Dockerfile.playwright  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: create.spec.ts  delete.spec.ts  drawer.spec.ts  filter-sort.spec.ts  fixtures.ts  update.spec.ts
frontend/src/: index.css  main.tsx  router.tsx
scripts/: pre-commit.sh
(+31 files in other folders)
